--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,6 +13,7 @@ set(_test_sources
       utils/tests/test_strings.cpp
       utils/tests/test_type_list.cpp
       dispatcher/tests/test_dispatcher.cpp
+      unit/tests/test_config.cpp
 )
 
 target_link_libraries(kamayan PRIVATE parthenon)
