--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -17,6 +17,7 @@ filter=-build/include_subdir
 # filter=-whitespace/parens  # 413 errors
 # filter=-build/namespaces
 filter=-legal/copyright # do we want a FLASH copyright in all the files?
+filter=-whitespace/indent_namespace
 # filter=-build/include_subdir # directory symlinking really messes this up
 
 
