adding singularity-eos

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/parthenon"]
 	path = external/parthenon
 	url = https://github.com/acreyes/parthenon.git
+[submodule "external/singularity-eos"]
+	path = external/singularity-eos
+	url = https://github.com/lanl/singularity-eos.git
