test ideal gamma eos

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,6 +18,7 @@ set(_test_sources
       utils/tests/test_type_list.cpp
       dispatcher/tests/test_dispatcher.cpp
       dispatcher/tests/test_options.cpp
+      eos/tests/test_eos.cpp
       kamayan/tests/test_config.cpp
       kamayan/tests/test_runtime_parameters.cpp
       driver/tests/test_driver.cpp
