--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,10 @@
 set(_sources
       driver/kamayan_driver.cpp
+      kamayan/config.cpp
       kamayan/runtime_parameters.cpp
       kamayan/unit.cpp
+      physics/eos/eos.cpp
+      physics/physics.cpp
       utils/strings.cpp
 )
 
@@ -18,12 +21,13 @@ set(_test_sources
       utils/tests/test_type_list.cpp
       dispatcher/tests/test_dispatcher.cpp
       dispatcher/tests/test_options.cpp
+      driver/tests/test_driver.cpp
       kamayan/tests/test_config.cpp
       kamayan/tests/test_runtime_parameters.cpp
-      driver/tests/test_driver.cpp
+      physics/eos/tests/test_eos.cpp
 )
 
-target_link_libraries(kamayan PRIVATE parthenon)
+target_link_libraries(kamayan PRIVATE parthenon singularity-eos::singularity-eos)
 target_include_directories(kamayan PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 if (kamayan_ENABLE_TESTING) 
@@ -33,7 +37,7 @@ if (kamayan_ENABLE_TESTING)
          ${_sources}
          ${_test_sources}
    )
-   target_link_libraries(kamayan_test GTest::gtest_main GTest::gmock_main parthenon) 
+   target_link_libraries(kamayan_test GTest::gtest_main GTest::gmock_main parthenon singularity-eos) 
    target_include_directories(kamayan_test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
    include(GoogleTest)
    gtest_discover_tests(kamayan_test)
