--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -36,6 +36,7 @@ jobs:
         exclude:
           - os: ubuntu-latest
             c_compiler: cl
+        cpp_src_directories: [src]
 
     steps:
     - uses: actions/checkout@v4
@@ -72,3 +73,11 @@ jobs:
       # Execute tests defined by the CMake configuration. Note that --build-config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest --build-config ${{ matrix.build_type }}
+
+    - name: Lint
+      working-directory: ${{ github.workspace }}
+      run: uv run cpplint --counting=detailed --recursive ${{ matrix.cpp_src_directories }}
+
+    - name: Format
+      working-directory: ${{ github.workspace }}
+      run: ls ${{ matrix.cpp_src_directories }}/**/*pp | xargs uv run clang-format -Werror --dry-run
