--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,8 +9,53 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  setup:
     runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        submodules: recursive
+
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.10"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install uv
+        uv sync
+
+  lint-format:
+    runs-on: ${{ matrix.os }}
+    needs: [setup]
+
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        cpp_src_directories: [src]
+
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        submodules: recursive
+
+    - name: Lint
+      working-directory: ${{ github.workspace }}
+      run: uv run cpplint --counting=detailed --recursive ${{ matrix.cpp_src_directories }}
+
+    - name: Format
+      working-directory: ${{ github.workspace }}
+      run: ls ${{ matrix.cpp_src_directories }}/**/*pp | xargs uv run clang-format -Werror --dry-run
+
+  build-unit-test:
+    runs-on: ${{ matrix.os }}
+    needs: [setup]
 
     strategy:
       # Set fail-fast to false to ensure that feedback is delivered for all matrix combinations. Consider changing this to true when your workflow is stable.
@@ -36,7 +81,6 @@ jobs:
         exclude:
           - os: ubuntu-latest
             c_compiler: cl
-        cpp_src_directories: [src]
 
     steps:
     - uses: actions/checkout@v4
@@ -75,23 +119,3 @@ jobs:
       run: ctest --build-config ${{ matrix.build_type }}
 
 
-  lint-format:
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        cpp_src_directories: [src]
-
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        submodules: recursive
-
-    - name: Lint
-      working-directory: ${{ github.workspace }}
-      run: uv run cpplint --counting=detailed --recursive ${{ matrix.cpp_src_directories }}
-
-    - name: Format
-      working-directory: ${{ github.workspace }}
-      run: ls ${{ matrix.cpp_src_directories }}/**/*pp | xargs uv run clang-format -Werror --dry-run
