--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,31 +9,8 @@ on:
     branches: [ "main" ]
 
 jobs:
-  setup:
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        submodules: recursive
-
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.10"
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install uv
-        uv sync
-
   lint-format:
     runs-on: ${{ matrix.os }}
-    needs: [setup]
 
     strategy:
       matrix:
@@ -41,6 +18,19 @@ jobs:
         cpp_src_directories: [src]
 
     steps:
+    - name: Install uv
+      uses: astral-sh/setup-uv@v5
+      with:
+        enable-cache: true
+
+    - name: "Set up Python"
+      uses: actions/setup-python@v5
+      with:
+        python-version-file: ".python-version"
+
+    - name: Install the project
+      run: uv sync --all-extras --dev
+
     - name: Lint
       working-directory: ${{ github.workspace }}
       run: uv run cpplint --counting=detailed --recursive ${{ matrix.cpp_src_directories }}
@@ -51,7 +41,6 @@ jobs:
 
   build-unit-test:
     runs-on: ${{ matrix.os }}
-    needs: [setup]
 
     strategy:
       # Set fail-fast to false to ensure that feedback is delivered for all matrix combinations. Consider changing this to true when your workflow is stable.
