--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,18 +18,20 @@ jobs:
         cpp_src_directories: [src]
 
     steps:
+    - uses: actions/checkout@v4
+
     - name: Install uv
       uses: astral-sh/setup-uv@v5
       with:
         enable-cache: true
 
     - name: "Set up Python"
-      uses: actions/setup-python@v5
-      with:
-        python-version-file: ".python-version"
 
     - name: Install the project
       run: uv sync --all-extras --dev
+
+    - name: Set up Python
+      run: uv python install
 
     - name: Lint
       working-directory: ${{ github.workspace }}
@@ -68,6 +70,9 @@ jobs:
             c_compiler: cl
 
     steps:
+    - uses: actions/checkout@v4
+      with:
+        submodules: recursive
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
       id: strings
