--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -34,13 +34,16 @@ jobs:
       run: uv sync --all-extras --dev
 
     - name: Set up Python
+      id: python-setup
       run: uv python install
 
     - name: Lint
+      if: steps.python-setup.outcome == 'success'
       working-directory: ${{ github.workspace }}
       run: uv run cpplint --counting=detailed --recursive ${{ matrix.cpp_src_directories }}
 
     - name: Format
+      if: steps.python-setup.outcome == 'success'
       working-directory: ${{ github.workspace }}
       run: ls ${{ matrix.cpp_src_directories }}/**/*pp | xargs uv run clang-format -Werror --dry-run
 
