--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,8 +15,6 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        cpp_src_directories: [src]
-        src_extensions: ["*.cpp", "*.hpp"]
 
     steps:
     - uses: actions/checkout@v4
@@ -41,12 +39,13 @@ jobs:
     - name: Lint
       if: success() || steps.python-setup.outcome == 'success'
       working-directory: ${{ github.workspace }}
-      run: uv run cpplint --counting=detailed --recursive ${{ matrix.cpp_src_directories }}
+      run: |
+        uv run cpplint --counting=detailed --recursive src
 
     - name: Format
       if: success() || steps.python-setup.outcome == 'success'
       working-directory: ${{ github.workspace }}
-      run: ls ${{ matrix.cpp_src_directories }}/**/${{ matrix.src_extensions }} | xargs uv run clang-format -Werror --dry-run --verbose
+      run: ls ${{ matrix.cpp_src_directories }}/**/*[ch]pp | xargs uv run clang-format -Werror --dry-run --verbose
 
   build-unit-test:
     runs-on: ${{ matrix.os }}
