--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Format
       if: success() || steps.python-setup.outcome == 'success'
       working-directory: ${{ github.workspace }}
-      run: ls ${{ matrix.cpp_src_directories }}/src/**/*.[ch]pp | xargs uv run clang-format -Werror --dry-run --verbose
+      run: ls src/**/*.[ch]pp | xargs uv run clang-format -Werror --dry-run --verbose
 
   build-unit-test:
     runs-on: ${{ matrix.os }}
