--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,7 +9,45 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  lint-format:
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Install uv
+      uses: astral-sh/setup-uv@v5
+      with:
+        enable-cache: true
+
+    - name: "Set up Python"
+      uses: actions/setup-python@v5
+      with:
+        python-version-file: "pyproject.toml"
+
+    - name: Install the project
+      run: uv sync --all-extras --dev
+
+    - name: Set up Python
+      id: python-setup
+      run: uv python install
+
+    - name: Lint
+      if: success() || steps.python-setup.outcome == 'success'
+      working-directory: ${{ github.workspace }}
+      run: |
+        uv run cpplint --counting=detailed --recursive src
+
+    - name: Format
+      if: success() || steps.python-setup.outcome == 'success'
+      working-directory: ${{ github.workspace }}
+      run: ls src/**/*.[ch]pp | xargs uv run clang-format -Werror --dry-run --verbose
+
+  build-unit-test:
     runs-on: ${{ matrix.os }}
 
     strategy:
@@ -72,3 +110,5 @@ jobs:
       # Execute tests defined by the CMake configuration. Note that --build-config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest --build-config ${{ matrix.build_type }}
+
+
