--- a/src/problems/isentropic_vortex.in
+++ b/src/problems/isentropic_vortex.in
@@ -6,20 +6,20 @@ refinement = none
 # numlevel = 3
 
 nx1 = 64
-x1min = -0.5
-x1max = 0.5
+x1min = -5.0
+x1max = 5.0
 ix1_bc = periodic
 ox1_bc = periodic
 
 nx2 = 64
-x2min = -0.5
-x2max = 0.5
+x2min = -5.0
+x2max = 5.0
 ix2_bc = periodic
 ox2_bc = periodic
 
 nx3 = 1
-x3min = -0.5
-x3max = 0.5
+x3min = -5.0
+x3max = 5.0
 ix3_bc = periodic
 ox3_bc = periodic
 
@@ -35,7 +35,13 @@ integrator = rk2
 ncycle_out_mesh = -10000
 
 
-<parthenon/output1>
+<parthenon/output0>
 file_type = rst
 dt = 0.1
+variables = velocity, dens, pres
+
+<parthenon/output1>
+file_type = hdf5
+dt = 0.1
+variables = velocity, dens, pres
 
