--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,7 +39,7 @@ if (kamayan_ENABLE_TESTING)
       kamayan_test
          ${_test_sources}
    )
-   target_link_libraries(kamayan_test GTest::gtest_main GTest::gmock_main parthenon singularity-eos kamayan) 
+   target_link_libraries(kamayan_test GTest::gtest_main GTest::gmock_main kamayan) 
    target_include_directories(kamayan_test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
    include(GoogleTest)
    gtest_discover_tests(kamayan_test)
