--- a/src/problems/CMakeLists.txt
+++ b/src/problems/CMakeLists.txt
@@ -1,5 +1,2 @@
-add_executable(
-   isentropic_vortex
-   isentropic_vortex.cpp
-)
+add_executable(isentropic_vortex isentropic_vortex.cpp)
 target_link_libraries(isentropic_vortex PRIVATE kamayan)
