--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,8 +23,7 @@ set(_test_sources
     kamayan/tests/test_unit_collection.cpp
     physics/eos/tests/test_eos.cpp)
 
- target_link_libraries(kamayan PUBLIC parthenon
-                                        singularity-eos::singularity-eos)
+target_link_libraries(kamayan PUBLIC parthenon singularity-eos::singularity-eos)
 target_include_directories(kamayan PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_subdirectory(problems)
