--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,4 +74,5 @@ if(kamayan_ENABLE_TESTING)
       CACHE BOOL "" FORCE)
   FetchContent_MakeAvailable(googletest)
   include(CTest)
+  enable_testing()
 endif()
