--- a/src/problems/isentropic_vortex.in
+++ b/src/problems/isentropic_vortex.in
@@ -31,7 +31,7 @@ nx3 = 1
 <parthenon/time>
 nlim = 1
 tlim = 1.0
-integrator = rk1
+integrator = rk2
 ncycle_out_mesh = -10000
 
 
@@ -45,3 +45,5 @@ file_type = hdf5
 dt = 0.1
 variables = velocity, dens, pres
 
+<eos>
+mode_init = dens_pres
