--- a/src/problems/isentropic_vortex.in
+++ b/src/problems/isentropic_vortex.in
@@ -29,28 +29,31 @@ nx2 = 32
 nx3 = 1
 
 <parthenon/time>
-nlim = 5
+nlim = 1000000
 tlim = 10.0
-integrator = rk2
+integrator = rk1
 ncycle_out_mesh = -10000
 
 
 <parthenon/output0>
 file_type = rst
-dt = 0.1
-variables = velocity, dens, pres
+dt = 1.0
+dn = -1
 
 <parthenon/output1>
 file_type = hdf5
-dt = 0.1
+dt = 1.0
 variables = velocity, dens, pres
 
 <eos>
 mode_init = dens_pres
 
+<hydro>
+cfl = 0.8
+
 <isentropic_vortex>
 density = 1.0
 pressure = 1.0
-velx = 0.0
-vely = 0.0
+velx = 1.0
+vely = 1.0
 strength = 5.0
