--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,6 @@ requires-python = ">= 3.10"
 dependencies = [
    "clang-format>=20.1.0",
    "cmakelang>=0.6.13",
+   "compdb>=0.2.0",
    "cpplint>=2.0.0",
 ]
