--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -38,8 +38,7 @@ add_subdirectory(problems)
 
 if(kamayan_ENABLE_TESTING)
   add_executable(kamayan_test ${_test_sources})
-  target_link_libraries(kamayan_test GTest::gtest GTest::gmock
-                        kamayan)
+  target_link_libraries(kamayan_test GTest::gtest GTest::gmock kamayan)
   target_include_directories(kamayan_test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
   include(GoogleTest)
   gtest_discover_tests(kamayan_test)
