[WIP] Add hydro (#6)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,16 @@
 set(_sources
     driver/kamayan_driver.cpp
+    grid/grid.cpp
     kamayan/config.cpp
     kamayan/kamayan.cpp
     kamayan/runtime_parameters.cpp
     kamayan/unit.cpp
     physics/eos/eos.cpp
     physics/physics.cpp
+    physics/hydro/hydro_time_step.cpp
+    physics/hydro/hydro.cpp
+    physics/hydro/hydro_add_flux_tasks.cpp
+    physics/hydro/primconsflux.cpp
     utils/strings.cpp)
 
 add_library(kamayan OBJECT ${_sources})
@@ -13,8 +18,11 @@ add_library(kamayan OBJECT ${_sources})
 
 # maybe I should just glob for tests...
 set(_test_sources
+    tests/gtest_main.cpp
+    grid/tests/test_grid.cpp
     utils/tests/test_strings.cpp
     utils/tests/test_type_list.cpp
+    utils/tests/test_type_list_array.cpp
     dispatcher/tests/test_dispatcher.cpp
     dispatcher/tests/test_options.cpp
     driver/tests/test_driver.cpp
@@ -29,10 +37,8 @@ target_include_directories(kamayan PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 add_subdirectory(problems)
 
 if(kamayan_ENABLE_TESTING)
-  enable_testing()
   add_executable(kamayan_test ${_test_sources})
-  target_link_libraries(kamayan_test GTest::gtest_main GTest::gmock_main
-                        kamayan)
+  target_link_libraries(kamayan_test GTest::gtest GTest::gmock kamayan)
   target_include_directories(kamayan_test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
   include(GoogleTest)
   gtest_discover_tests(kamayan_test)
