--- a/src/problems/isentropic_vortex.in
+++ b/src/problems/isentropic_vortex.in
@@ -5,13 +5,13 @@ problem_id = isentropic_vortex
 refinement = none
 # numlevel = 3
 
-nx1 = 64
+nx1 = 128
 x1min = -5.0
 x1max = 5.0
 ix1_bc = periodic
 ox1_bc = periodic
 
-nx2 = 64
+nx2 = 128
 x2min = -5.0
 x2max = 5.0
 ix2_bc = periodic
@@ -24,24 +24,36 @@ ix3_bc = periodic
 ox3_bc = periodic
 
 <parthenon/meshblock>
-nx1 = 16
-nx2 = 16
+nx1 = 32
+nx2 = 32
 nx3 = 1
 
 <parthenon/time>
-nlim = 0
-tlim = 1.0
+nlim = 10000
+tlim = 10.0
 integrator = rk2
 ncycle_out_mesh = -10000
 
 
 <parthenon/output0>
 file_type = rst
-dt = 0.1
-variables = velocity, dens, pres
+dt = 1.0
+dn = -1
 
 <parthenon/output1>
 file_type = hdf5
-dt = 0.1
+dt = 1.0
 variables = velocity, dens, pres
 
+<eos>
+mode_init = dens_pres
+
+<hydro>
+cfl = 0.8
+
+<isentropic_vortex>
+density = 1.0
+pressure = 1.0
+velx = 1.0
+vely = 1.0
+strength = 5.0
