--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,6 @@ dependencies = [
    "cmakelang>=0.6.13",
    "compdb>=0.2.0",
    "cpplint>=2.0.0",
+   "mkdocs>=1.6.1",
+   "pymdown-extensions>=10.14.3",
 ]
