--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version="0.1.0"
 requires-python = ">= 3.10"
 dependencies = [
    "clang-format>=20.1.0",
+   "cmake>=4.0.0",
    "cmakelang>=0.6.13",
    "compdb>=0.2.0",
    "cpplint>=2.0.0",
