--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,7 +18,6 @@ add_library(kamayan OBJECT ${_sources})
 
 # maybe I should just glob for tests...
 set(_test_sources
-    tests/gtest_main.cpp
     grid/tests/test_grid.cpp
     utils/tests/test_strings.cpp
     utils/tests/test_type_list.cpp
@@ -37,9 +36,12 @@ target_include_directories(kamayan PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 add_subdirectory(problems)
 
 if(kamayan_ENABLE_TESTING)
-  add_executable(kamayan_test ${_test_sources})
-  target_link_libraries(kamayan_test GTest::gtest GTest::gmock kamayan)
-  target_include_directories(kamayan_test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+  add_library(kamayan_test_lib OBJECT ${_test_sources})
+  target_link_libraries(kamayan_test_lib PUBLIC GTest::gtest GTest::gmock kamayan)
+  target_include_directories(kamayan_test_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+
+  add_executable(kamayan_test tests/gtest_main.cpp)
+  target_link_libraries(kamayan_test PRIVATE kamayan_test_lib kamayan)
   include(GoogleTest)
   gtest_discover_tests(kamayan_test)
 endif()
