--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_executable(make_task_list_graphs make_task_list_graphs.cpp)
-target_link_libraries(make_task_list_graphs PRIVATE kamayan kamayan_test_lib)
+add_executable(kamayan_docs kamayan_docs.cpp)
+target_link_libraries(kamayan_docs PRIVATE kamayan kamayan_test_lib)
 
