--- a/src/problems/CMakeLists.txt
+++ b/src/problems/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_executable(isentropic_vortex isentropic_vortex.cpp)
 target_link_libraries(isentropic_vortex PRIVATE kamayan)
+# ADD_PROBLEM(isentropic_vortex.cpp isentropic_vortex)
