--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
    "compdb>=0.2.0",
    "cpplint>=2.0.0",
    "markdown-include>=0.8.1",
+   "markdown-katex>=202406.1035",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.11",
    "pymdown-extensions>=10.14.3",
