--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,3 +23,6 @@ markdown_extensions:
         base_path: docs
     - pymdownx.snippets:
         base_path: src
+    - markdown_katex:
+        no_inline_svg: True
+        insert_fonts_css: True
