--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,7 +12,7 @@ nav:
     - eos.md
 
 theme: 
-  name: readthedocs
+  name: material
   features:
       - navigation.indexes
 
@@ -26,3 +26,7 @@ markdown_extensions:
     - markdown_katex:
         no_inline_svg: True
         insert_fonts_css: True
+    - pymdownx.blocks.caption
+    - pymdownx.highlight:
+        anchor_linenums: true
+    - pymdownx.superfences
