--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,10 +2,11 @@ site_name: Kamayan
 nav: 
   - Home: index.md
   - Infrastructure:
+    - Kamayan: kamayan.md
     - Driver: driver.md
     - Grid: grid.md
     - Dispatcher: dispatcher.md
-    - Utilities: utils.md
+    - TypeList: type_list.md
   - Physics: 
     - physics.md
     - hydro.md
