--- a/src/problems/CMakeLists.txt
+++ b/src/problems/CMakeLists.txt
@@ -1,3 +1,3 @@
 # --8<-- [start:add]
-ADD_PROBLEM(isentropic_vortex.cpp isentropic_vortex)
+add_problem(isentropic_vortex.cpp isentropic_vortex)
 # --8<-- [end:add]
