--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,8 @@ theme:
       - navigation.indexes
 
 repo_url: https://github.com/acreyes/kamayan
+plugins:
+  - mike:
 
 markdown_extensions:
     - markdown_include.include:
