--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
    "cpplint>=2.0.0",
    "markdown-include>=0.8.1",
    "markdown-katex>=202406.1035",
+   "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.11",
    "pymdown-extensions>=10.14.3",
