--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,14 @@ version="0.1.0"
 requires-python = ">= 3.10"
 dependencies = [
    "clang-format>=20.1.0",
+   "cmake>=4.0.0",
    "cmakelang>=0.6.13",
    "compdb>=0.2.0",
    "cpplint>=2.0.0",
+   "markdown-include>=0.8.1",
+   "markdown-katex>=202406.1035",
+   "mike>=2.1.3",
+   "mkdocs>=1.6.1",
+   "mkdocs-material>=9.6.11",
+   "pymdown-extensions>=10.14.3",
 ]
