--- a/src/problems/isentropic_vortex.in
+++ b/src/problems/isentropic_vortex.in
@@ -50,6 +50,8 @@ mode_init = dens_pres
 
 <hydro>
 cfl = 0.8
+reconstruction = plm
+slope_liimiter = mc
 
 # --8<-- [start:parms]
 <isentropic_vortex>
